--- a/CatFactsProject/templates/index.html
+++ b/CatFactsProject/templates/index.html
@@ -43,6 +43,11 @@
                                 </svg>
                             </div>
                         </div>
+                        <div>
+
+                            <h5>{{facts}}</h5>
+
+                        </div>
 
                     </div>
                     <div class="right-side lg:pr-4">
