arreglos login-registro

--- a/CatFactsProject/templates/signup.html
+++ b/CatFactsProject/templates/signup.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% block content %} 
+ 
 
 <!DOCTYPE html>
 <html lang="en">
@@ -57,11 +59,11 @@
                 </div>
                 <form action="" method="POST">
                     {% csrf_token %}
+                    {{ register_form }}
                     <!--<div class="flex lg:flex-row flex-col lg:space-x-2">
                         <input type="text" placeholder="First Name"  class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                         <input type="text" placeholder="Last Name" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                     </div>-->
-                    <input type="text" name="username"placeholder="Username" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                     <button type="submit" class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Sign Up</button>
                     <div class="text-center mt-5 space-x-2">
                         <p class="text-base"> Do you have an account? <a href="/signin"> Login </a></p>
@@ -135,3 +137,5 @@
 
 
 </html>
+
+{% endblock %} 
