--- a/CatFactsProject/templates/index.html
+++ b/CatFactsProject/templates/index.html
@@ -169,8 +169,10 @@
                             </div>
     
                             <div uk-lightbox>
-                                <h1>
-                                    {{facts}}
+                                <h1 action="" method="GET">
+
+                                {{facts1}}
+
                                 </h1>
                             </div>
                             
@@ -178,7 +180,7 @@
                             <div class="py-3 px-4 space-y-3"> 
                                
                                 <div class="flex space-x-4 lg:font-bold">
-                                    <a href="#" class="flex items-center space-x-2">
+                                    <a href="/like-post?id_facts={{Fact.id_facts}}" class="flex items-center space-x-2">
                                         <div class="p-2 rounded-full text-black">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" width="25" height="25" class="">
                                                 <path d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z" />
@@ -267,8 +269,10 @@
                             </div>
     
                             <div uk-lightbox>
-                                <h1>
-                                    {{facts}}
+                                <h1 action="" method="GET">
+
+                                        {{facts2}}
+
                                 </h1>
                             </div>
 
@@ -370,8 +374,10 @@
                             </div>
     
                             <div uk-lightbox>
-                                <h1>
-                                    {{facts}}
+                                <h1 action="" method="GET">
+
+                                {{facts3}}
+
                                 </h1>
                             </div>
                             
@@ -467,9 +473,13 @@
                           </div>
   
                          
-                            <h1>
-                                {{facts}}
+                          <div uk-lightbox>
+                            <h1 action="" method="GET">
+
+                            {{facts4}}
+
                             </h1>
+                        </div>
                            
   
                           <div class="py-3 px-4 space-y-3"> 
