--- a/CatFactsProject/templates/index.html
+++ b/CatFactsProject/templates/index.html
@@ -253,20 +253,16 @@
 
                     <div class="bg-gray-50  border-b border-gray-100 flex items-baseline justify-between py-4 px-6 ">
                         <h2 class="font-semibold text-lg">Most liked facts!</h2>
-                        <a href="#"> Refresh</a>
                     </div>
 
                     <div class="divide-gray-300 divide-gray-50 divide-opacity-50 divide-y px-4 ">
                         <div class="flex items-center justify-between py-3">
                             <div class="flex flex-1 items-center space-x-4">
-                                <a href="profile.html">
-                                    <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}"
-                                        class="bg-gray-200 rounded-full w-10 h-10">
-                                </a>
+
                                 
                                 <div class="flex flex-col">
                                     <span class="block capitalize font-semibold">  </span>
-                                    <span class="block capitalize text-sm"> 320k followers </span>
+                                    <span class="block capitalize text-sm"> </span>
                                 </div>
                                 
                             </div>
@@ -277,13 +273,10 @@
                         </div>
                         <div class="flex items-center justify-between py-3">
                             <div class="flex flex-1 items-center space-x-4">
-                                <a href="profile.html">
-                                    <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}"
-                                        class="bg-gray-200 rounded-full w-10 h-10">
-                                </a>
+
                                 <div class="flex flex-col">
-                                    <span class="block capitalize font-semibold"> taiye </span>
-                                    <span class="block capitalize text-sm"> New user </span>
+                                    <span class="block capitalize font-semibold"></span>
+                                    <span class="block capitalize text-sm"></span>
                                 </div>
                             </div>
                             <a href="#"
@@ -292,13 +285,10 @@
                         </div>
                         <div class="flex items-center justify-between py-3">
                             <div class="flex flex-1 items-center space-x-4">
-                                <a href="profile.html">
-                                    <img src="{% static 'assets/images/avatars/avatar-5.jpg' %}"
-                                        class="bg-gray-200 rounded-full w-10 h-10">
-                                </a>
+
                                 <div class="flex flex-col">
-                                    <span class="block capitalize font-semibold"> kayode </span>
-                                    <span class="block capitalize text-sm"> 20.7k followers </span>
+                                    <span class="block capitalize font-semibold"></span>
+                                    <span class="block capitalize text-sm"></span>
                                 </div>
                             </div>
                             <a href="#"
@@ -307,13 +297,10 @@
                         </div>
                         <div class="flex items-center justify-between py-3">
                             <div class="flex flex-1 items-center space-x-4">
-                                <a href="profile.html">
-                                    <img src="{% static 'assets/images/avatars/avatar-7.jpg' %}"
-                                        class="bg-gray-200 rounded-full w-10 h-10">
-                                </a>
+
                                 <div class="flex flex-col">
-                                    <span class="block capitalize font-semibold"> faith_do </span>
-                                    <span class="block capitalize text-sm"> 100.5k followers </span>
+                                    <span class="block capitalize font-semibold"></span>
+                                    <span class="block capitalize text-sm"> </span>
                                 </div>
                             </div>
 
